Add event listeners to popup for user interaction

--- a/popup.html
+++ b/popup.html
@@ -42,9 +42,10 @@
 			<h1>Password Manager</h1>
 		</div>
 		<div class="inputs">
-			<input placeholder="Username"/>
-			<input type="password" placeholder="Password"/>
-			<button  id="changeColor">Submit</button>
+			<input id="username" placeholder="Username"/>
+			<input id="password" type="password" placeholder="Password"/>
+			<button id="submit">Submit</button>
 		</div>
 	</body>
+	<script src="handle.js"></script>
 </html>
