fixed paths to work with restructure

--- a/project/popup/popup.html
+++ b/project/popup/popup.html
@@ -47,5 +47,5 @@
 			<button id="submit">Submit</button>
 		</div>
 	</body>
-	<script src="../handle.js"></script>
+	<script src="./handle.js"></script>
 </html>
