--- a/project/options/options.html
+++ b/project/options/options.html
@@ -16,6 +16,6 @@
 			<p>Choose a different background color!</p>
 		</div>
 	</body>
-	<script src="options.js"></script>
+	<script src="./options.js"></script>
 </html>
 
