Pain is without form but not without name; and the name is es6

--- a/test/popup.html
+++ b/test/popup.html
@@ -10,6 +10,7 @@
             padding: 0.5rem 2rem;
         }
     </style>
+    <script type="module" src="rc4_wasm.js"></script>
     <script src="script.js"></script>
 </head>
 <body>
